ci: add full Gold Client CI/CD pipeline workflows